--- a/src/styles/components/_space-babe.scss
+++ b/src/styles/components/_space-babe.scss
@@ -1,7 +1,7 @@
 
 #space-babe {
   --babe-size: 15vw;
-  @include colorize-fills-and-lines(lime);
+  --spin-time: 4s;
 
   top: 0;
   left: 0;
@@ -10,12 +10,22 @@
   position: fixed;
   pointer-events: none;
   // transition: top 0.4s, left 0.4s;
+
+  &.hidden {
+    @include colorize-fills-and-lines(gray);
+    opacity: 0.1;
+    --spin-time: 10s;
+  }
+
+  // &.born {
+    @include colorize-fills-and-lines(lime);
+  // }
   
   .center-wrap {
     @include mask(black);
     // transform: translate(-50%,-50%);
     svg {
-      animation: spin 4s linear infinite;
+      animation: spin var(--spin-time) linear infinite;
     }
   }
 }
