--- a/src/styles/components/_stage.scss
+++ b/src/styles/components/_stage.scss
@@ -19,3 +19,16 @@
   align-items: center;
   justify-content: center;
 }
+
+.scene {
+  #scene-name {
+    @include text-box;
+    font-size: 0.5em;
+    text-transform: uppercase;
+    display: inline-block;
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    border: 0;
+  }
+}
