Finish a few more scenes

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,6 +8,7 @@
 @import 'components/typography';
 @import 'components/global';
 @import 'components/stage';
+@import 'components/scenes';
 @import 'components/scene-controls';
 @import 'components/bg-video';
 @import 'components/livestream';
