Add vision spawning and update styles

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,3 +15,4 @@
 @import 'components/space-babe';
 @import 'components/baby-color-picker';
 @import 'components/vision';
+@import 'components/funk-bottle';
