--- a/src/styles/components/_global.scss
+++ b/src/styles/components/_global.scss
@@ -1,3 +1,22 @@
 body {
     color: white;
 }
+
+.button {
+    font-size: 2rem;
+    @include text-box;
+    color: white;
+    border: 2px solid white;
+    outline: 0;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.1s;
+
+    &:hover {
+        background: rgba(black,0.8);
+    }
+    &:active {
+        background: rgba(white,0.5);
+        transform: scale(1.2);
+    }
+}
