--- a/src/styles/components/_vision.scss
+++ b/src/styles/components/_vision.scss
@@ -56,11 +56,13 @@
       color: white;
       padding: 20px;
       position: fixed;
-      max-width: 600px;  
+      max-width: 800px;  
       font-size: 1em;
       z-index: 1000;
       background: rgba(black,0.9);
       transform: translate(-50%,0);
+
+      font-size: 25px;
   
       p {
         margin: 0;
@@ -74,7 +76,10 @@
 
         button {
           margin-top: 20px;
+          font-size: 25px;
           display: block;
+          margin: 20px auto;
+          @include font-display;
         }
       }
     }
