--- a/src/styles/components/_space-babe.scss
+++ b/src/styles/components/_space-babe.scss
@@ -10,6 +10,7 @@
   height: var(--babe-size);
   position: fixed;
   pointer-events: none;
+  z-index: 100000;
 
   &.ghost {
     @include colorize-fills-and-lines(gray);
