--- a/src/styles/components/_vision.scss
+++ b/src/styles/components/_vision.scss
@@ -5,11 +5,12 @@
 .vision {
 
   .portal {
+    @include ha;
     // @include glow(white);
     top: 50vh;
     left: 50vw;
-    width: 60px;
-    height: 60px;
+    width: 150px;
+    height: 150px;
     opacity: 0.8;
     position: fixed;
     cursor: pointer;
@@ -17,11 +18,15 @@
     border-radius: 50%;
     border: 3px solid white;
     transform: translate(-50%,-50%);
-    transition: width 0.2s, height 0.2s, top 10s linear, left 10s linear;
+    transition: width 0.2s, height 0.2s, transform 10s linear;
+    box-shadow:
+    0 0 60px 30px #fff,  /* inner white */
+    0 0 100px 60px #f0f, /* middle magenta */
+    0 0 140px 90px #0ff; /* outer cyan */
 
     &:hover {
-      width: 100px;
-      height: 100px;
+      width: 200px;
+      height: 200px;
     }
 
     .preview-image {
@@ -44,7 +49,7 @@
     left: 0;
     height: 100%;
     background-size: contain;
-    z-index: 1000000;
+    z-index: 1;
 
     animation: background-scroll 30s infinite linear;
 
@@ -75,8 +80,13 @@
 
         button {
           font-size: 50px;
-          margin: 10px auto;
+          margin-left: 10px;
+          padding: 0.1em;
           @include font-display;
+
+          &:first-child {
+            margin: 0;
+          }
         }
       }
     }
