--- a/src/styles/components/_scene-controls.scss
+++ b/src/styles/components/_scene-controls.scss
@@ -59,3 +59,16 @@ $control-padding: 30px;
   background: rgba(white,0.8);
   transform: translate(-50%,0);
 }
+
+#participant-stats {
+  bottom: 0;
+  left: 50%;
+  color: red;
+  z-index: 1000;
+  font-size: 2em;
+  position: fixed;
+  font-family: arial;
+  pointer-events: none;
+  border: 1px dotted red;
+  translate: transformX(-50%);
+}
