--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -51,7 +51,7 @@ html {
 }
 
 #props {
-    h1,h2,h3,h4,h5,h6, p {
+    h1,h2,h3,h4,h5,h6,p,.text-box {
         @include font-display;
         @include text-box;
         display: inline-block;
