--- a/src/styles/components/_button-matrix.scss
+++ b/src/styles/components/_button-matrix.scss
@@ -1,20 +1,20 @@
 .button-matrix {
-  display: flex;
-  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  display: flex;
   flex-wrap: wrap;
+  position: absolute;
 
   button {
-    --color: white;
     border: 0;
     outline: 0;
+    width: 100%;
+    opacity: 0.5;
+    --color: white;
     cursor: pointer;
     transition: opacity 0.2s;
-    opacity: 0.5;
-    width: 100%;
     background: radial-gradient(circle at 50%, var(--color) 0%, transparent 50%);
 
 
@@ -44,15 +44,14 @@
   width: 100vh;
   height: 100vh;
   left: calc((100vw - 100vh)/2);
-  // max-width: 100vh;
   animation: bass-matrix-spin 60s linear infinite;
 
   button{
-    // opacity: 0.8;
     position: relative;
     transition: background 0.2s;
+
     &:active {
-      background: radial-gradient(circle at 50%, var(--custom-color) 0%, transparent 50%);
+      background: radial-gradient(circle at 50%, var(--baby-color) 0%, transparent 50%);
     }
   }
 }
