--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,6 +7,7 @@
 
 @import 'components/typography';
 @import 'components/global';
+@import 'components/cta';
 @import 'components/stage';
 @import 'components/scenes';
 @import 'components/scene-controls';
