--- a/src/styles/components/_livestream.scss
+++ b/src/styles/components/_livestream.scss
@@ -10,6 +10,7 @@
 #livestream {
   top: 50%;
   left: 50%;
+  line-height: 0;
   position: fixed;
   transition: opacity 1s;
   transform: translate(-50%,-50%);
@@ -38,18 +39,20 @@
   }
 
   .sizing-wrap{
-    transform: scale(0.8);
+    transform: scale(0.9);
     transition: transform 0.5s;
   }
 
   iframe {
-    width: 40vw;
-    height: calc(40vw * .56);
+    width: 36vw;
+    line-height: 0;
+    height: calc(36vw * .56);
 
     opacity: 0.7;
     overflow: hidden;
     position: relative;
     border-radius: 20px;
-    // box-shadow: 0 0 50px white, 0 0 5px white;
+
+    box-shadow: 0 0 50px white, 0 0 5px white;
   }
 }
