--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -19,6 +19,7 @@
       }
     }
     input, button {
+      @include font-display;
       color: white;
       border: 2px solid white;
       background: black;
