--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -44,7 +44,7 @@
   }
 
 html {
-    @include font-copy;
+    @include font-display;
     color: white;
     font-size: 36px;
     @include glow(white);
