--- a/src/styles/components/_global.scss
+++ b/src/styles/components/_global.scss
@@ -3,6 +3,10 @@ body {
 
     a {
         color: inherit;
+        transition: transform 0.1s;
+        &:hover {
+            text-decoration-color: red;
+        }
     }
 }
 
