--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,6 +11,7 @@
 @import 'components/stage';
 @import 'components/scenes';
 @import 'components/scene-controls';
+@import 'components/chat';
 @import 'components/bg-video';
 @import 'components/livestream';
 @import 'components/holy-space-baby';
