--- a/src/styles/components/_stage.scss
+++ b/src/styles/components/_stage.scss
@@ -24,7 +24,7 @@
   #scene-name {
     @include text-box;
     font-size: 0.5em;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     display: inline-block;
     position: absolute;
     top: -2px;
@@ -37,7 +37,7 @@
 #title {
   @include text-box;
   font-size: 0.5rem;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   display: inline-block;
   position: absolute;
   top: -2px;
