--- a/src/styles/util/_layout.scss
+++ b/src/styles/util/_layout.scss
@@ -16,7 +16,7 @@
   top: 83%;
   left: 50%;
   position: absolute;
-  transform: translate(-50%,-50%)
+  transform: translate(-50%,-50%);
 }
   
 .layout-center {
@@ -26,7 +26,21 @@
 .layout-top {
   @include layout-top;
 }
+
+.layout-top-edge {
+  top: 0;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,0);
+}
   
 .layout-bottom {
   @include layout-bottom;
+}
+
+#show-countdown {
+  position: fixed;
+  top: 0;
+  right: 0;
+  font-size: 4em;
 }
