--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -50,7 +50,7 @@ html {
     @include glow(white);
 }
 
-#props {
+.scene {
     h1,h2,h3,h4,h5,h6,p,.text-box {
         @include font-display;
         @include text-box;
