Get rehearsal mvp built

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,3 +18,4 @@
 @import 'components/button-matrix';
 @import 'components/vision';
 @import 'components/funk-bottle';
+@import 'components/prompter';
