--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -47,4 +47,5 @@
   right: 10px;
   pointer-events: none;
   animation: float-away 30s forwards linear;
+  text-shadow:  0px 0px 3px black, 0px 0px 8px black;
 }
