Begin adding mobile version. Content updates for Ep 3

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,3 +19,4 @@
 @import 'components/vision';
 @import 'components/funk-bottle';
 @import 'components/prompter';
+@import 'components/show-countdown';
