--- a/src/styles/components/_funk-bottle.scss
+++ b/src/styles/components/_funk-bottle.scss
@@ -21,6 +21,7 @@
     border: 0;
     outline: 0;
     width: 300px;
+    max-width: 40vw;
     height: 150px;
     cursor: pointer;
     display: inline-block;
@@ -28,6 +29,7 @@
     background-size: contain;
     transition: transform 0.2s;
     background-repeat: no-repeat;
+    background-position: center;
 
     &:hover {
       transform: scale(1.1);
