--- a/src/styles/components/_prompter.scss
+++ b/src/styles/components/_prompter.scss
@@ -1,8 +1,18 @@
+.prompt-box {
+  box-shadow:0 0 20px var(--baby-color);
+  // font-size: 1.5em;
+  background: black;
+  max-width: 95vw;
+  padding: 0.2em 0.4em 0.4em;
+}
+
 #prompt {
   display: flex;
   @include text-box;
   justify-content: center;
-  padding: 20px;
+  // padding: 20px;
+  padding: 0;
+  width: 100%;
   input, button {
     @include font-display;
     color: white;
@@ -51,6 +61,7 @@
   // background: red;
   text-shadow: 0px 0px 3px black, 0px 0px 8px black, 0px 0px 8px black, 0px 0px 15px black, 0px 0px 15px black, 0px 0px 15px black;
 
+  max-width: 7em;
 
   background: radial-gradient(black 0%, transparent 70%);
 
@@ -89,7 +100,7 @@
   // transform: translate(-50%,-50%);
   z-index: -1;
   width: 90%;
-  height: 90%;
+  height: 50%;
   position: fixed;
   background-size: auto 70%;
   background-position: left center;
@@ -98,8 +109,3 @@
   box-shadow: 0 0 20px var(--baby-color);
 }
 
-.prompt-box {
-
-  box-shadow:0 0 20px var(--baby-color);
-  font-size: 1.5em;
-}
