--- a/src/styles/util/_media-queries.scss
+++ b/src/styles/util/_media-queries.scss
@@ -1,7 +1,7 @@
 // Our breakpoints
 $breakpoints: (
   sm: 0px,
-  md: 600px,
+  md: 800px,
   lg: 1200px
 );
 
@@ -27,6 +27,11 @@ $breakpoints: (
 }
 @mixin max-height($res) {
   @media screen and (max-height: $res) {
+    @content;
+  }
+}
+@mixin min-height($res) {
+  @media screen and (min-height: $res) {
     @content;
   }
 }
@@ -81,6 +86,14 @@ $breakpoints: (
       @include min-screen($breakpoint-size) {
         @content;
       }
+    }
+  }
+}
+
+@mixin media-big {
+  @include media(md) {
+    @include min-height (650px) {
+      @content;
     }
   }
 }
