More ep2 content fixes and style tweaks

--- a/src/styles/components/_prompter.scss
+++ b/src/styles/components/_prompter.scss
@@ -102,8 +102,8 @@
   width: 90%;
   height: 50%;
   position: fixed;
-  background-size: auto 70%;
-  background-position: left center;
+  background-size: auto 120%;
+  background-position: center center;
   animation: portal-open 5s forwards;
   border-radius: 50%;
   box-shadow: 0 0 20px var(--baby-color);
