Remove pointer events that create unwanted mobile interactions

--- a/src/styles/components/_bg-video.scss
+++ b/src/styles/components/_bg-video.scss
@@ -8,9 +8,6 @@
   overflow: hidden;
   min-width: 100vw;
   min-height: 100vh;
+  pointer-events: none;
   transform: translate(-50%,-50%);
-
-  &.-overlay {
-    opacity: 0.5;
-  }
 }
