Add VIP mode and special funk bottle

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,3 +20,4 @@
 @import 'components/funk-bottle';
 @import 'components/prompter';
 @import 'components/show-countdown';
+@import 'components/vip-auth';
