Add tips, fernando, edits

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,3 +21,4 @@
 @import 'components/prompter';
 @import 'components/show-countdown';
 @import 'components/vip-auth';
+@import 'components/tipjar';
