--- a/src/styles/components/_livestream.scss
+++ b/src/styles/components/_livestream.scss
@@ -30,6 +30,10 @@
     }
   }
 
+  &.vip {
+    @include rainbow-mask;
+  }
+
   &.big {
     .sizing-wrap{
       transform: scale(1.2);
@@ -49,12 +53,12 @@
   }
   &.tiny {
     // opacity: 0.8;
-    .sizing-wrap{
-      transform: scale(0.9);
-      @include media-big {
-        transform: scale(0.5);
-      }
-    }
+    // .sizing-wrap{
+    //   transform: scale(0.9);
+    //   @include media-big {
+    //     transform: scale(0.5);
+    //   }
+    // }
   }
 
   .animation-wrap {
