--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -36,6 +36,12 @@
   }
 }
 
+.scene.rainbow-baby {
+  #chat input[type="text"] {
+    @include rainbow-text;
+  }
+}
+
 @keyframes float-away {
   0% {
     opacity: 1;
@@ -61,4 +67,7 @@
   pointer-events: none;
   animation: float-away 30s forwards linear;
   text-shadow:  0px 0px 3px black, 0px 0px 8px black;
+  span {
+    text-shadow:  0px 0px 3px black, 0px 0px 8px black;
+  }
 }
