--- a/src/styles/components/_funk-bottle.scss
+++ b/src/styles/components/_funk-bottle.scss
@@ -23,6 +23,12 @@
     transform: rotate(-45deg);
   }
 
+  &.-rainbow {
+    bottom: 0;
+    right: 0;
+    transform: rotate(-135deg);
+  }
+
   button {
     border: 0;
     outline: 0;
@@ -51,8 +57,6 @@
 .vip-only {
   &.-vip .funk-bottle {
       @include rainbow-mask;
-    
-
   }
   &.-not-vip .funk-bottle {
       pointer-events: none;
