--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,3 +22,4 @@
 @import 'components/show-countdown';
 @import 'components/vip-auth';
 @import 'components/tipjar';
+@import 'components/fireflies';
