--- a/src/styles/components/_scene-controls.scss
+++ b/src/styles/components/_scene-controls.scss
@@ -53,6 +53,21 @@ $control-padding: 30px;
       color: white;
     }
   }  
+
+  #zombie-button {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    font-size: 2em;
+    padding: 0;
+  }  
+  #zombie-clear-button {
+    position: fixed;
+    top: 50%;
+    left: 0;
+    font-size: 2em;
+    padding: 0;
+  }  
 }
 
 #teleprompter {
