--- a/src/styles/components/_vip-auth.scss
+++ b/src/styles/components/_vip-auth.scss
@@ -1,10 +1,12 @@
 #vip-auth {
   border: 2px solid white;
+  width: 17em;
+  max-width: 17em;
 
   input {
     @include font-display;
     color: white;
-    font-size: 1em;
+    font-size: 2em;
     border-radius: 3px;
     padding: 0em 0.3em;
     background: black;
@@ -16,6 +18,6 @@
   }
 
   input[type="text"] {
-    width: 9em;
+    width: 8em;
   }
 }
