--- a/src/styles/components/_fireflies.scss
+++ b/src/styles/components/_fireflies.scss
@@ -11,11 +11,23 @@
   left: -20px;
   width: 20px;
   height: 20px;
-  transition: transform 0.8s ease-out;
-  animation: firefly-glow 2s infinite;
+  transition: transform 0.8s ease-out, opacity 0.2s;
+
+  .light {
+    width: 100%;
+    height: 100%;
+    animation: firefly-glow 2s infinite;
+  }
 
   &.-user {
     width: 40px;
     height: 40px;
+  }
+  &.-inactive {
+    animation: none;
+    opacity: 0;
+  }
+  &.-performer {
+    display: none;
   }
 }
