--- a/src/styles/components/_tug-of-war.scss
+++ b/src/styles/components/_tug-of-war.scss
@@ -16,6 +16,7 @@
     outline: 0;
     // min-width: 10%;
     flex-grow: 1;
+    transition: width .1s;
 
     .caption {
       @include text-box;
@@ -34,14 +35,6 @@
       z-index: -1;
     }
 
-    &.side-1 {
-      background: linear-gradient(to right, transparent, transparent 95%, orange)
-    }
-
-    &.side-2 {
-      background: linear-gradient(to left, transparent, transparent 95%, orange)
-    }
-
     &.side-1, &.side-2 {
       &:hover {
         background: rgba(orange,0.2); 
@@ -50,8 +43,24 @@
       &:active {
         background: rgba(orange,0.4); 
       }
+
+      .background::after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        content: '',
+      }
     }
 
+    &.side-1 .background::after {
+      background: linear-gradient(to right, transparent, transparent 95%, orange)
+    }
+
+    &.side-2 .background::after {
+      background: linear-gradient(to left, transparent, transparent 95%, orange)
+    }
     .percentage {
       position: absolute;
       top: 0;
