--- a/src/styles/components/_tug-of-war.scss
+++ b/src/styles/components/_tug-of-war.scss
@@ -112,7 +112,7 @@
     width: 100%;
     height: 100%;
     background-color: transparent;
-    background-image: url('../../static/img/bus.png');
+    background-image: url('../../src/img/bus.png');
     background-size: contain;
     border: none;
     outline: none;
