Add laser zombies, pomplo the tentacle cow, and firefly click explosions

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,3 +24,5 @@
 @import 'components/tipjar';
 @import 'components/fireflies';
 @import 'components/tug-of-war';
+@import 'components/hellbus';
+@import 'components/pomplo';
