--- a/src/styles/components/_scene-controls.scss
+++ b/src/styles/components/_scene-controls.scss
@@ -60,6 +60,13 @@ $control-padding: 30px;
     left: 0;
     font-size: 2em;
     padding: 0;
+  }    
+  #pomplo-button {
+    position: fixed;
+    top: 0;
+    right: 50%;
+    font-size: 2em;
+    padding: 0;
   }  
   #zombie-clear-button {
     position: fixed;
