--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -58,6 +58,33 @@
   }
 }
 
+
+@keyframes heal {
+  0% {
+    opacity: 1;
+    display: block;
+    transform: translate(0,0) scale(2);
+  }
+  6% {
+    opacity: 1;
+    display: block;
+    transform: translate(-50vw,-50vh) scale(6);
+  }
+
+  90% {
+    opacity: 0.3;
+    display: block;
+    transform: translate(-50vw,-50vh) scale(12);
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+
 #chat-messages .message {
   bottom: 0;
   right: 10px;
@@ -67,7 +94,7 @@
   pointer-events: none;
   animation: float-away 30s forwards linear;
   text-shadow:  0px 0px 3px black, 0px 0px 8px black;
-  span {
-    text-shadow:  0px 0px 3px black, 0px 0px 8px black;
+  &.-heal {
+    animation: heal 3s forwards linear;
   }
 }
