--- a/src/styles/components/_fireflies.scss
+++ b/src/styles/components/_fireflies.scss
@@ -4,6 +4,15 @@
   //60% {opacity: 0;}
   100% {opacity: 0;}
 }
+
+@keyframes click {
+  0% { 
+    transform: scale(0.2);
+  }
+  100% {
+    transform: scale(3);
+  }
+}
 .firefly {
   position: fixed;
   pointer-events: none;
@@ -12,6 +21,24 @@
   width: 20px;
   height: 20px;
   transition: transform 0.5s ease-out, opacity 0.2s;
+
+  .click {
+    display: none;
+  }
+
+  &.-clicking {
+    .click {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      border: 1px solid white;
+      animation: click forwards 0.1s;
+    }
+  }
 
   .light {
     width: 100%;
