--- a/src/styles/components/_tug-of-war.scss
+++ b/src/styles/components/_tug-of-war.scss
@@ -19,8 +19,12 @@
     transition: width .1s;
 
     .caption {
+      position: absolute;
       @include text-box;
       color: white;
+      bottom: 10%;
+      left: 50%;
+      transform: translateX(-50%);
     }
     
     .background {
