--- a/src/styles/components/_scene-controls.scss
+++ b/src/styles/components/_scene-controls.scss
@@ -68,6 +68,13 @@ $control-padding: 30px;
     font-size: 2em;
     padding: 0;
   }  
+  #tug-clear-button {
+    position: fixed;
+    bottom: 100%;
+    left: 0;
+    font-size: 2em;
+    padding: 0;
+  }  
   #zombie-clear-button {
     position: fixed;
     top: 50%;
