--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,3 +26,4 @@
 @import 'components/tug-of-war';
 @import 'components/hellbus';
 @import 'components/pomplo';
+@import 'components/coloring-book';
