--- a/src/styles/components/_bg-video.scss
+++ b/src/styles/components/_bg-video.scss
@@ -1,3 +1,13 @@
+@keyframes portal-open {
+  0% {
+    transform: translate(-50%,-50%) scale(0.1);
+    opacity: 0.2;
+  }
+  100% {
+    // opacity: 0.8;
+  }
+}
+
 .bg-video {
   top: 50%;
   left: 50%;
@@ -10,4 +20,21 @@
   min-height: 100vh;
   pointer-events: none;
   transform: translate(-50%,-50%);
+
+  &--image {
+    background-size: cover;
+  }
+  &--portal {
+
+    animation: portal-open 5s forwards;
+    box-shadow: 0 0 20px var(--baby-color);
+    border-radius: 50%;
+    pointer-events: none;
+  }
+  &--corner {
+    min-width: 50vw;
+    min-height: 50vh;
+    top: 25%;
+    left: 25%;
+  }
 }
