--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -44,6 +44,12 @@
 
 #cta {
 
+  .row {
+    @include media(lg) {
+      display: flex;
+    }
+  }
+
   .add-to-cal {
     display: block;
     margin-top: 10px;
